--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     ext.junit_version = '4.12'
     ext.kotlin_version = '1.0.6'
     ext.springboot_version = '1.4.3.RELEASE'
+    ext.postgresql_version = '9.4.1212.jre7'
 
     repositories {
         mavenCentral()
@@ -29,7 +30,7 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 //    compile 'org.jetbrains.exposed:exposed:0.7.5'
-    compile group: 'org.postgresql', name: 'postgresql', version: '9.4.1212.jre7'
+    compile "org.postgresql:postgresql:$postgresql_version"
     compile "org.springframework.boot:spring-boot-starter-thymeleaf"
     compile "org.springframework.boot:spring-boot-starter-data-jpa"
     compile "org.springframework.boot:spring-boot-devtools"
